# Karate-AI-Analyzer

./: .gitignore  LICENCE  README.md  calibrate_golden.py  config.py  karate_core.pyd  kime_detector.py  main.py  pose_hands.py  pose_legs.py  requirements.txt  speed_tracker.py  stability.py  test_engine.py  visualize_data.py
analysis/: mechanics.py
cpp_core/: CMakeLists.txt  karate_engine.cpp
data/: recorder.py
sensors/: pose_detector.py  stereo.py
ui/: ai_judge.py
